--- a/pom.xml
+++ b/pom.xml
@@ -7,61 +7,45 @@
     <groupId>com.smallaswater.anvilplus</groupId>
     <artifactId>AnvilPlus</artifactId>
     <version>1.1.5</version>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
+    <repositories>
+        <repository>
+            <id>nukkitx-repo</id>
+            <url>https://repo.nukkitx.com/snapshot</url>
+        </repository>
+    </repositories>
+
+
+
     <dependencies>
         <dependency>
             <groupId>cn.nukkit</groupId>
-            <artifactId>nukkit</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <artifactId>Nukkit</artifactId>
+            <version>PM1E</version>
+            <optional>false</optional>
             <scope>system</scope>
-            <systemPath> F:/Nukkit驱动/nukkit-1.16.200.jar</systemPath>
+            <systemPath>${basedir}/lib/Nukkit-PM1E.jar</systemPath>
         </dependency>
-        <dependency>
-            <groupId>money</groupId>
-            <artifactId>money</artifactId>
-            <version>1.1.7</version> <!-- 记得修改到已经安装到本地库最新版本 -->
-            <scope>system</scope>
-            <systemPath>F:/Nukkit驱动/[经济前置]Money-3.3.jar</systemPath>
-        </dependency>
-
         <dependency>
             <groupId>me.onebone</groupId>
             <artifactId>economyapi</artifactId>
-            <version>1.1.7</version> <!-- 记得修改到已经安装到本地库最新版本 -->
-            <scope>system</scope>
-            <systemPath>F:/Nukkit驱动/EconomyAPI.jar</systemPath>
+            <version>2.0.2</version>
+            <scope>provided</scope>
         </dependency>
-        <dependency>
-            <groupId>net.player</groupId>
-            <artifactId>PlayerPoint</artifactId>
-            <version>1.1.7</version> <!-- 记得修改到已经安装到本地库最新版本 -->
-            <scope>system</scope>
-            <systemPath>F:/Nukkit开服/plugins/PlayerPoints_v1.1.3.jar</systemPath>
-        </dependency>
-
-        <dependency>
-            <groupId>net.autoupdata</groupId>
-            <artifactId>updata</artifactId>
-            <version>1.1.7</version> <!-- 记得修改到已经安装到本地库最新版本 -->
-            <scope>system</scope>
-            <systemPath>F:/Nukkit开服/plugins/AutoUpData_v1.2.3.jar</systemPath>
-        </dependency>
-
-
-
     </dependencies>
-    <build>
-        <finalName>${project.artifactId}_v${project.version}</finalName>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.5.1</version>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 
+    <build>
+        <defaultGoal>clean package</defaultGoal>
+        <sourceDirectory>src/main/java</sourceDirectory>
+        <resources>
+            <resource>
+                <filtering>true</filtering>
+                <directory>src/main/resources/</directory>
+            </resource>
+        </resources>
+    </build>
 </project>
